prototyped weave and hero creation ui structures